[gd_scene load_steps=29 format=3 uid="uid://duvsa2r7f53oy"]

[ext_resource type="Script" path="res://Enemies/Star/star.gd" id="1_a0cwb"]
[ext_resource type="PackedScene" uid="uid://1d5okjmxlrdj" path="res://Enemies/Star/Sprite/star_sprite.tscn" id="2_iui8m"]
[ext_resource type="Script" path="res://Enemies/Star/shell.gd" id="3_yfsqo"]
[ext_resource type="Texture2D" uid="uid://bcqu0p5xce1cp" path="res://Enemies/Star/Shell/Star Shell 1.png" id="6_pwxvl"]
[ext_resource type="Texture2D" uid="uid://dvpxrbokg15c6" path="res://Enemies/Star/Shell/Star Shell Light 1.png" id="7_joar6"]
[ext_resource type="Texture2D" uid="uid://myhd2mq0ulj4" path="res://Enemies/Star/Shell/Star Shell 2.png" id="8_tt6t2"]
[ext_resource type="Texture2D" uid="uid://dtlffnwerr7y3" path="res://Enemies/Star/Shell/Star Shell Light 2.png" id="9_jvais"]
[ext_resource type="Texture2D" uid="uid://drv6ho0eho4fd" path="res://Enemies/Star/Shell/Star Shell 4.png" id="10_sa7mq"]
[ext_resource type="Texture2D" uid="uid://cinrj6bbhxoyw" path="res://Enemies/Star/Shell/Star Shell Light 4.png" id="11_ib8vh"]
[ext_resource type="Texture2D" uid="uid://b3lga7xhaa4u3" path="res://Enemies/Star/Shell/Star Shell 5.png" id="12_4g25g"]
[ext_resource type="Texture2D" uid="uid://ddu3y2lv5d54k" path="res://Enemies/Star/Shell/Star Shell Light 5.png" id="13_cbitq"]
[ext_resource type="Texture2D" uid="uid://bhcbajj0cnbyw" path="res://Enemies/Star/Shell/Star Shell 3.png" id="14_3jcek"]
[ext_resource type="Script" path="res://Enemies/hurt_box.gd" id="14_wdnoj"]
[ext_resource type="Texture2D" uid="uid://b1ly852qklum0" path="res://Enemies/Star/Shell/Star Shell Light 3.png" id="15_8lkfx"]
[ext_resource type="Script" path="res://Enemies/Star/star_state_machine.gd" id="15_hndjk"]
[ext_resource type="Script" path="res://Enemies/Star/hit_box.gd" id="15_iuvkl"]
[ext_resource type="Script" path="res://Enemies/Star/star_state_idle.gd" id="16_3cf8m"]
[ext_resource type="Script" path="res://Enemies/Star/star_state_charge.gd" id="17_5rcwd"]
[ext_resource type="Script" path="res://Enemies/Star/star_state_spawn.gd" id="17_7wqf0"]
[ext_resource type="Script" path="res://Enemies/Star/star_state_teleport.gd" id="18_qfcp5"]
[ext_resource type="PackedScene" uid="uid://b8c6s8ng5867s" path="res://Enemies/Indicators/attack_warning_indicator.tscn" id="21_ives3"]
[ext_resource type="PackedScene" uid="uid://n88qgch6n50w" path="res://Enemies/Indicators/stun_indicator.tscn" id="22_1nesj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d0wjw"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nr1nb"]
size = Vector2(46, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_5tbji"]
radius = 18.0

[sub_resource type="Gradient" id="Gradient_pidcx"]
offsets = PackedFloat32Array(0.126638, 0.873362, 0.995633, 1)
colors = PackedColorArray(0.53, 0.53, 0.53, 0, 1, 1, 1, 0.0784314, 1, 1, 1, 0.239216, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wwhx6"]
gradient = SubResource("Gradient_pidcx")
width = 300
height = 300
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_7m2um"]
radius = 150.0

[node name="Star" type="RigidBody2D" node_paths=PackedStringArray("sprite") groups=["Stars"]]
rotation = 6.28319
collision_layer = 0
linear_damp = 5.0
script = ExtResource("1_a0cwb")
sprite = NodePath("Sprite")

[node name="Sprite" parent="." instance=ExtResource("2_iui8m")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d0wjw")

[node name="Shells" type="Node2D" parent="."]

[node name="Shell0" type="Area2D" parent="Shells" node_paths=PackedStringArray("sprite")]
position = Vector2(-4.54598e-06, -26)
collision_layer = 8
collision_mask = 4
script = ExtResource("3_yfsqo")
sprite = NodePath("StarShellLight")

[node name="StarShell" type="Sprite2D" parent="Shells/Shell0"]
texture = ExtResource("6_pwxvl")

[node name="StarShellLight" type="Sprite2D" parent="Shells/Shell0"]
texture = ExtResource("7_joar6")

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="Shells/Shell0"]
visible = false
shape = SubResource("RectangleShape2D_nr1nb")

[node name="Shell1" type="Area2D" parent="Shells" node_paths=PackedStringArray("sprite")]
position = Vector2(26, -9)
collision_layer = 8
collision_mask = 4
script = ExtResource("3_yfsqo")
shell_number = 1
sprite = NodePath("StarShellLight")

[node name="StarShell" type="Sprite2D" parent="Shells/Shell1"]
scale = Vector2(1.00001, 0.999994)
texture = ExtResource("8_tt6t2")

[node name="StarShellLight" type="Sprite2D" parent="Shells/Shell1"]
position = Vector2(-1, 1)
scale = Vector2(1.00001, 0.999994)
texture = ExtResource("9_jvais")

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="Shells/Shell1"]
visible = false
position = Vector2(-2, 0.999996)
rotation = 1.25664
shape = SubResource("RectangleShape2D_nr1nb")

[node name="Shell2" type="Area2D" parent="Shells" node_paths=PackedStringArray("sprite")]
position = Vector2(18, 25)
collision_layer = 8
collision_mask = 4
script = ExtResource("3_yfsqo")
shell_number = 2
sprite = NodePath("StarShellLight")

[node name="StarShell" type="Sprite2D" parent="Shells/Shell2"]
scale = Vector2(1.00001, 0.999984)
texture = ExtResource("10_sa7mq")

[node name="StarShellLight" type="Sprite2D" parent="Shells/Shell2"]
position = Vector2(-2, -1)
scale = Vector2(1.00001, 0.999984)
texture = ExtResource("11_ib8vh")

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="Shells/Shell2"]
visible = false
position = Vector2(-3, -3)
rotation = 2.49582
shape = SubResource("RectangleShape2D_nr1nb")

[node name="Shell3" type="Area2D" parent="Shells" node_paths=PackedStringArray("sprite")]
position = Vector2(-19, 25)
collision_layer = 8
collision_mask = 4
script = ExtResource("3_yfsqo")
shell_number = 3
sprite = NodePath("StarShellLight")

[node name="StarShell" type="Sprite2D" parent="Shells/Shell3"]
scale = Vector2(1, 1.00001)
skew = -1.41859e-05
texture = ExtResource("12_4g25g")

[node name="StarShellLight" type="Sprite2D" parent="Shells/Shell3"]
position = Vector2(3, -2)
scale = Vector2(1, 1.00001)
skew = -1.41859e-05
texture = ExtResource("13_cbitq")

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="Shells/Shell3"]
visible = false
position = Vector2(3, -4)
rotation = 0.645772
shape = SubResource("RectangleShape2D_nr1nb")

[node name="Shell4" type="Area2D" parent="Shells" node_paths=PackedStringArray("sprite")]
position = Vector2(-26, -10)
collision_layer = 8
collision_mask = 4
script = ExtResource("3_yfsqo")
shell_number = 4
sprite = NodePath("StarShellLight")

[node name="StarShell" type="Sprite2D" parent="Shells/Shell4"]
scale = Vector2(1, 0.999995)
texture = ExtResource("14_3jcek")

[node name="StarShellLight" type="Sprite2D" parent="Shells/Shell4"]
position = Vector2(1, 1)
scale = Vector2(1, 0.999995)
texture = ExtResource("15_8lkfx")

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="Shells/Shell4"]
visible = false
position = Vector2(0.999998, 2)
rotation = 1.88496
shape = SubResource("RectangleShape2D_nr1nb")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("14_wdnoj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_5tbji")

[node name="HitBox" type="Area2D" parent="."]
modulate = Color(1, 1, 0, 0)
collision_layer = 0
collision_mask = 2
script = ExtResource("15_iuvkl")

[node name="Sprite2D" type="Sprite2D" parent="HitBox"]
texture = SubResource("GradientTexture2D_wwhx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_7m2um")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("15_hndjk")
current_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource("17_7wqf0")

[node name="Timer" type="Timer" parent="StateMachine/Spawn"]
one_shot = true

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("16_3cf8m")

[node name="Timer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Charge" type="Node" parent="StateMachine"]
script = ExtResource("17_5rcwd")

[node name="Timer" type="Timer" parent="StateMachine/Charge"]
one_shot = true

[node name="Teleport" type="Node" parent="StateMachine"]
script = ExtResource("18_qfcp5")

[node name="PrepTimer" type="Timer" parent="StateMachine/Teleport"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="StateMachine/Teleport"]
one_shot = true

[node name="AttackWarningIndicator" parent="." instance=ExtResource("21_ives3")]
position = Vector2(0, -50)
custom_offset = Vector2(0, -50)

[node name="StunIndicator" parent="." instance=ExtResource("22_1nesj")]
position = Vector2(0, -50)
custom_offset = Vector2(0, -50)
